--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
+.film-box {
+  background-image: linear-gradient(#A0BEF8, #B5F0F0);
   text-align: center;
+  position: relative;
+  padding: 10px;
+  left: 32%;
+  width: 500px;  
+  border-radius: 10px;
+  margin-top: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.header { 
   color: white;
+  text-shadow: 1.5px 1.5px #4482ff;
 }
 
-.App-link {
-  color: #61dafb;
+.film-item {
+  border-radius: 10px;
+  background-color: white;
+  padding: 5px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a {
+  color: #3378FF;
+  text-decoration: none;
+  text-shadow: 0.5px 0.5px #4482ff;
+}
+
+.flex-item-form {
+  margin: 10px;
+  
+}
+
+.button {
+  background-color: #3378FF;
+  color: white;
+  padding: 10px;
+  border: 2px solid #3378FF;
+  border-radius: 5px;
+  cursor:pointer;
+}
+
+
+.text-box {
+  background-color: white;
+  color: black;
+  padding: 5px;
+  border-radius: 5px;
 }
